--- a/MyTrade/Views/User/SponsorIncomeForUser.cshtml
+++ b/MyTrade/Views/User/SponsorIncomeForUser.cshtml
@@ -24,44 +24,44 @@
                         <div class="row">
                             @*<div class="col-lg-3 col-md-3" style="margin-left:10px">*@
                             @*<div class="col-lg-3 col-md-3">
-                                <div class="form-group">
-                                    <label>
-                                        Login Id
-                                    </label>
-                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id" })
-                                </div>
-                            </div>*@
+                                    <div class="form-group">
+                                        <label>
+                                            Login Id
+                                        </label>
+                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id" })
+                                    </div>
+                                </div>*@
                             @*<div class="col-lg-3 col-md-3" style="margin-left:10px">*@
                             @*<div class="col-lg-3 col-md-3">
-                                <div class="form-group">
-                                    <label>
-                                        Name
-                                    </label>
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @Placeholder = "Name" })
-                                </div>
-                            </div>*@
+                                    <div class="form-group">
+                                        <label>
+                                            Name
+                                        </label>
+                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @Placeholder = "Name" })
+                                    </div>
+                                </div>*@
                             @*<div class="col-lg-3 col-md-3" style="margin-left:10px">*@
-                            <div class="col-lg-3 col-md-3">
+                            @*<div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label>
                                         From Date
                                     </label>
                                     @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @Placeholder = "From Date" })
                                 </div>
-                            </div>
-                            <div class="col-lg-3 col-md-3">
+                            </div>*@
+                            @*<div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label> To Date</label>
                                     @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "To Date" })
 
                                 </div>
-                            </div>
+                            </div>*@
                             @*<div class="col-lg-3 col-md-3" style="margin-top:28px">*@
-                            <div class="col-lg-3 col-md-3">
+                            @*<div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <input type="submit" class="btn btn-success" style="margin-top:27px;" value="Search" name="btnSearch" />
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                         <div class="row">
                             <table id="html5-extension" class="table table-hover non-hover">
@@ -120,10 +120,3 @@
         mode: "range"
     });
 </script>
-
-
-
-
-
-
-
