--- a/MyTrade/Views/User/SponsorIncomeForUser.cshtml
+++ b/MyTrade/Views/User/SponsorIncomeForUser.cshtml
@@ -76,6 +76,8 @@
                                         <th>Percentage</th>
                                         @*<th>Level</th>
                                             <th>Transaction Date</th>*@
+                                        <th>Status</th>
+                                        <th>Date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -96,6 +98,8 @@
                                                     <td>@Item.Percentage %</td>
                                                     @*<td>@Item.Level</td>
                                                         <td>@Item.TransactionDate</td>*@
+                                                    <td>@Item.Status</td>
+                                                    <td>@Item.Date</td>
                                                 </tr>
                                                 i++;
                                             }
