--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -230,14 +230,14 @@
             <div class="widget widget-account-invoice-three five">
                 <div class="widget-heading">
                     <div class="wallet-balance">
-                        <p>Level Bonus</p>
+                        <p>Total Bonus</p>
                         <h5 class=""><span class="w-currency"></span> @ViewBag.TotalIncome</h5>
                     </div>
                     <div class="particular-balance d-flex mt-5">
                         <a href="/Report/LevelIncomeTr1">
                             <div class="fisrtdiv">
                                 <p> TTP </p>
-                                <h5 class=""><span class="w-currency"></span> @ViewBag.LevelIncomeTr1</</h5>
+                                <h5 class=""><span class="w-currency"></span> @ViewBag.LevelIncomeTr1</h5>
                             </div>
                         </a>
                         <a href="/Report/LevelIncomeTr2">
@@ -248,8 +248,8 @@
                         </a>
                         <a href="/User/SponsorIncomeForuser">
                             <div class="fisrtdiv">
-                                <p class="text-uppercase">Sponsor Bonus</p>
-                                <h5 class="text-right"><span class="w-currency"></span> @ViewBag.SponsorBonus</</h5>
+                                <p class="text-uppercase">SB</p>
+                                <h5 class="text-right"><span class="w-currency"></span> @ViewBag.SponsorBonus</h5>
                             </div>
                         </a>
                     </div>
