--- a/MyTrade/Views/Master/PackageList.cshtml
+++ b/MyTrade/Views/Master/PackageList.cshtml
@@ -68,6 +68,7 @@
                                             <th>Final Amount</th>
                                         }
                                         <th>Status</th>
+                                        <th>Sponsor Income</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -100,6 +101,7 @@
                                                         <td>@Item.FinalAmount</td>
                                                     }
                                                     <td>@Item.Status</td>
+                                                    <td>@Item.SponsorIncome</td>
                                                     <td>
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-sm">Edit</a>
                                                         <a href="/Master/DeletePackage?id=@Item.Packageid" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Package?');" name="btnDelete">Delete</a>
