--- a/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
@@ -51,11 +51,11 @@
                                     <tr>
                                         <th>S No.</th>
                                         <th>User</th>
-                                        <th>Cr Amount</th>
-                                        <th>Dr Amount</th>
-                                        <th>Used For</th>
-                                        <th>Narration</th>
-                                        <th>Date</th>
+                                        <th>Discription</th>
+                                        <th>Partner ID</th>
+                                        <th>Number</th>
+                                        <th>Amount</th>
+                                        <th>Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -69,11 +69,11 @@
                                                 <tr class="text-left">
                                                     <td>@i</td>
                                                     <td>@Item.LoginId</td>
-                                                    <td>@Item.CrAmount</td>
-                                                    <td>@Item.DrAmount</td>
-                                                    <td>@Item.TransactionType</td>
-                                                    <td>@Item.Narration</td>
-                                                    <td>@Item.TransactionDate</td>
+                                                    <td>@Item.Provider (@Item.ServerOrderId)</td>
+                                                    <td>@Item.ServerOrderId</td>
+                                                    <td>@Item.TransactionFor</td>
+                                                    <td>@Item.Amount</td>
+                                                    <td>@Item.Status</td>
                                                 </tr>
                                                 i++;
                                             }
