--- a/MyTrade/assets/css/structure.css
+++ b/MyTrade/assets/css/structure.css
@@ -105,7 +105,7 @@ code {
     margin-top: 56px;
 }
 
-#content {
+/*#content {
     position: relative;
     width: 50%;
     flex-grow: 8;
@@ -114,7 +114,7 @@ code {
     margin-left: 212px;
     transition: .600s;
     background-color: white;
-}
+}*/
 
 .main-container-fluid > .main-content > .container {
     float: left;
