--- a/MyTrade/Views/Recharge/DMT.cshtml
+++ b/MyTrade/Views/Recharge/DMT.cshtml
@@ -268,6 +268,16 @@
             margin-left: 230px !important;
             transition: .600s !important;
         }
+        #content {
+    
+    width: 100% !important;
+    flex-grow: 8;
+    margin-top: 0px !important;
+    margin-bottom: 0 !important;
+    margin-left: 0px !important;
+    transition: .600s;
+    background-color: white;
+}
 </style>
 <div class="container">
     <div class="row layout-top-spacing">
