--- a/MyTrade/Views/Recharge/Recharge.cshtml
+++ b/MyTrade/Views/Recharge/Recharge.cshtml
@@ -193,7 +193,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 200px;
+        width:200px;
         z-index: 10;
     }
 
@@ -209,7 +209,6 @@
         margin-top: -100px;
         z-index: 2;
     }
-
     .loader {
         position: absolute;
         top: 0;
@@ -240,7 +239,7 @@
 
         body.loading .overlay {
             display: block;
-        }*/
+        }*/ 
     /*.pageloader {
         position: fixed;
         left: 0px;
@@ -263,8 +262,8 @@
                             <br />
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-sm-12 col-md-12">
-                                <label style="color:red">Wallet Balance: @ViewBag.WalletBalance</label>
+                                <div class="col-lg-12 col-sm-12 col-md-12">
+                                    <label style="color:red">Wallet Balance: @ViewBag.WalletBalance</label>
                             </div>
                             <div class="col-lg-12 col-sm-12 col-md-12">
                                 <div class="card-billrecharge mb-5">
@@ -332,7 +331,7 @@
                                             <div id="divPrepaid">
                                                 <div class="col-lg-12 col-md-12">
                                                     <div class="form-group">
-                                                        <input type="text" name="PrepaidNo" maxlength="10" id="PrepaidNo" , onkeypress="return isNumberKey(event);" , class="form-control" required placeholder="Enter Your Mobile Number" onchange="return AutoFillOperator();" />
+                                                        <input type="text" name="PrepaidNo" maxlength="10" id="PrepaidNo" , onkeypress = "return isNumberKey(event);",  class="form-control" required placeholder="Enter Your Mobile Number" onchange="return AutoFillOperator();" />
                                                     </div>
                                                 </div>
 
@@ -661,7 +660,7 @@
     </div>
     <div class="loader">
         <center>
-            <img class="loading-image" src="~/ProfilePicture/untitled-5.gif" alt="loading..">
+            <img class="loading-image" src="~/ProfilePicture/untitled-5.gif" alt="loading.." >
         </center>
     </div>
 </div>
@@ -702,10 +701,10 @@
             url: '/Recharge/GetOperator',
             Type: "Get",
             DataType: "JSON",
-            beforeSend: function () {
+            beforeSend: function(){
                 $('.loader').show()
             },
-            complete: function () {
+            complete: function(){
                 $('.loader').hide();
             },
             success: function (data) {
@@ -808,7 +807,8 @@
             success: function (data) {
                 var obj = JSON.parse(data);
                 debugger
-                if (obj.success == false) {
+                if (obj.success ==false)
+                {
                     alert(obj.message);
                     $('#PrepaidNo').val('');
                 }
@@ -852,7 +852,7 @@
         });
     }
     function GetPlanDetails(str, name) {
-
+       
         debugger;
         $.ajax({
             url: '/Recharge/GetPlan',
@@ -952,41 +952,41 @@
         }
         else {
             $('.loader').show()
-            $.ajax({
-                url: '/Recharge/CreateOrder',
-                data: { Amount: $("#" + Type + "Amount").val(), MobileNo: $("#" + Type + "No").val(), Type: Type },
-                Type: "Get",
-                DataType: "JSON",
-                success: function (data) {
-                    debugger;
-                    if (data.Result == "Yes") {
-                        $('.loader').hide()
-                        if (confirm("Are you sure you want to continue for recharge?")) {
-                            $('.loader').show()
-                            if (Type == "Prepaid" || Type == "DTH") {
-                                PrepaidandDTHRecharge(data.OrderNo, Type);
-                            }
-                            else if (Type == "Postpaid") {
-                                PostpaidRecharge(data.OrderNo, Type);
-                            }
-                            else {
-                                UtilityPayments(data.OrderNo, Type);
-                            }
+        $.ajax({
+            url: '/Recharge/CreateOrder',
+            data: { Amount: $("#" + Type + "Amount").val(), MobileNo: $("#" + Type + "No").val(), Type: Type },
+            Type: "Get",
+            DataType: "JSON",
+            success: function (data) {
+                debugger;
+                if (data.Result == "Yes") {
+                    $('.loader').hide()
+                    if (confirm("Are you sure you want to continue for recharge?")) {
+                        $('.loader').show()
+                        if (Type == "Prepaid" || Type == "DTH") {
+                            PrepaidandDTHRecharge(data.OrderNo, Type);
+                        }
+                        else if (Type == "Postpaid") {
+                            PostpaidRecharge(data.OrderNo, Type);
                         }
                         else {
-                            $('.loader').hide()
-                            return false;
+                            UtilityPayments(data.OrderNo, Type);
                         }
                     }
-                    else if (data.Result == "No") {
-                        alert(data.Message);
-
+                    else {
+                        $('.loader').hide()
+                        return false;
                     }
-                },
-                error: function () {
-                    alert("Error");
                 }
-            });
+                else if (data.Result == "No") {
+                    alert(data.Message);
+                
+                }
+            },
+            error: function () {
+                alert("Error");
+            }
+        });
         }
     }
     function PrepaidandDTHRecharge(OrderNo, Type) {
