--- a/MyTrade/Views/Master/PackageMaster.cshtml
+++ b/MyTrade/Views/Master/PackageMaster.cshtml
@@ -416,6 +416,7 @@
             $('#BV').val('');
         }
         else {
+            CalculateFinalAmount();
             $('#BV').val(productprice);
 
         }
