--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
-    <link rel="icon" type="image/x-icon" href="~/assets/img/favicon.ico" />
+    <link rel="icon" type="image/png" href="/MytradeWebsite/assets/img/favicon.png">
     <link href="~/assets/css/loader.css" rel="stylesheet" type="text/css" />
     <script src="~/assets/js/loader.js"></script>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -477,11 +477,14 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Rewards" data-parent="#accordionExample">
+                            @*<li>
+                                <a href="/User/userreward">User Award</a>
+                            </li>*@
                             <li>
                                 <a href="~/Coming.html">Member Award</a>
                             </li>
                             <li>
-                                <a href="~/Coming.html">Trade Rewards</a>
+                                <a href="/User/userreward">Trade Rewards</a>
                             </li>
                             <li>
                                 <a href="~/Coming.html"> Team Club</a>
