--- a/MyTrade/Views/Admin/DistributedTPSDetails.cshtml
+++ b/MyTrade/Views/Admin/DistributedTPSDetails.cshtml
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                          
-                                <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                                <table  class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                     <thead>
                                         <tr>
                                             <th>Sr No.</th>
